fix: Spacing on tertiary links

--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -3,16 +3,6 @@
   border-right: 1px solid var(--color-neutrals-100);
   font-size: 0.875rem;
 
-  ul {
-    margin: 0;
-    padding-left: 1rem;
-    list-style: none;
-  }
-
-  h3 {
-    margin: 0;
-  }
-
   button {
     background: none;
     border: 0;
@@ -25,14 +15,6 @@
     }
   }
 
-  nav {
-    margin-top: 1rem;
-
-    @media (max-width: 760px) {
-      display: none;
-    }
-  }
-
   &.isOpen {
     nav {
       @media (max-width: 760px) {
@@ -42,27 +24,34 @@
   }
 }
 
-.top {
-  display: flex;
-  justify-content: space-between;
+.nav {
+  margin-top: 1rem;
+
+  @media (max-width: 760px) {
+    display: none;
+  }
 }
 
 .logo {
   width: 200px;
 }
 
+.listNav,
 .nestedNav {
-  display: none;
+  list-style: none;
 }
 
-.isDisplay {
-  display: block;
+.nestedNav {
+  display: none;
+  padding-left: 1rem;
+
+  &.isExpanded {
+    display: block;
+  }
 }
 
 .listNav {
-  ul {
-    padding-left: 1rem;
-  }
+  padding-left: 0;
 }
 
 .navItem {
@@ -85,9 +74,6 @@
 
 .navDepth1 {
   font-weight: normal;
-  ul {
-    padding-left: 0.2rem;
-  }
 }
 
 .navDepth2 {
